wei xiu gai beifen

--- a/NotePad-master/app/src/main/res/values/strings.xml
+++ b/NotePad-master/app/src/main/res/values/strings.xml
@@ -34,6 +34,9 @@
     <string name="button_ok">OK</string>
     <string name="text_title">Title:</string>
 
+    <string name="button_search">Search</string>
+
+
     <string name="resolve_edit">Edit note</string>
     <string name="resolve_title">Edit title</string>
 
